tests/errors/syn_method26.java
public class syn_method26 {
public static void ( ) {
 
}
}